--- a/RJ/templates/Homepage.html
+++ b/RJ/templates/Homepage.html
@@ -4,7 +4,7 @@
         {% load static %}
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> RJ CREATION </title>
-        <link rel="stylesheet" href="{% static 'css/Homepage.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'RJ/css/Homepage.css' %}" type="text/css">
         <link rel="icon" href="static/img/Logo.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -12,7 +12,7 @@
     <body>
         <div class="header">
             <div class="first">
-               <img src="static/img/Logo.png" alt="Logo"> 
+               <img src="{% static 'RJ//img/logo.png' %}" alt="Logo"> 
                
                <section class="search">
                 <form method="post" action="/search">
