--- a/RJ/templates/Homepage.html
+++ b/RJ/templates/Homepage.html
@@ -12,7 +12,7 @@
     <body>
         <div class="header">
             <div class="first">
-               <img src="{% static 'RJ//img/logo.png' %}" alt="Logo"> 
+               <img src="{% static 'img/Logo.png' %}" alt="Logo"> 
                
                <section class="search">
                 <form method="post" action="/search">
@@ -78,14 +78,14 @@
         </div>
         <div class="banner">
 
-            <img src="{% static 'img/ad.jpg '%}" alt="ad" width="100%" height="500px" style="border-radius: 10px; padding: 5px;">
+            <img src="{% static 'img/ad.jpg' %}" alt="ad" width="100%" height="500px" style="border-radius: 10px; padding: 5px;">
             
         </div>
         
         <footer id="info">
 
             <div class="logo">
-                <a href="/"><img src="static/img/Logo.png"></a>
+                <a href="/"><img src="{% static 'img/Logo.png' %}"></a>
             </div>
             <div class="data">
                 <div class="cat">
