--- a/RJ/templates/Login.html
+++ b/RJ/templates/Login.html
@@ -14,7 +14,7 @@
     <div class="login">
 
         <div class="logo">
-            <img src="{% static 'img/logo.png' %}" alt="Logo">
+            <img src="{% static 'img/Logo.png' %}" alt="Logo">
             <h1>Welcome To RJ Collection</h1>
             <br>
             {% if messages %}
