--- a/RJ/templates/Homepage.html
+++ b/RJ/templates/Homepage.html
@@ -33,13 +33,13 @@
             </div>
             <div class="second">
 
-                {% for i in category|slice:":8" %}
+<!--                 {% for i in category|slice:":8" %}
                     <a href="{% url 'products_by_category' i.id %}">{{ i.Name }}</a>
                 {% endfor %}
 
                 {% if category|length > 8 %}
                 <a href="/">More++</a>
-                {% endif %}
+                {% endif %} -->
 
 
                 <section class="search">
